[project]
name = "nonebot-plugin-ehentai"
version = "0.1.0"
description = "NoneBot2 plugin for searching and downloading galleries from E-Hentai"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "your-name" }]
dependencies = [
    "nonebot2>=2.4.0",
    "nonebot-adapter-onebot>=2.4.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/yourname/nonebot-plugin-ehentai"

[tool.nonebot]
plugins = ["nonebot_plugin_ehentai"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]